adding the greedy coloring to the algorithms and correcting the algorithm animatior