@@ -1,13 +1,16 @@
 package server;
 
 import graphtea.graph.graph.GraphModel;
+import graphtea.platform.core.BlackBoard;
 import graphtea.platform.extension.Extension;
+import graphtea.plugins.algorithmanimator.extension.AlgorithmExtension;
 import org.codehaus.jettison.json.JSONArray;
 import org.codehaus.jettison.json.JSONException;
 import org.codehaus.jettison.json.JSONObject;
 import org.reflections.Reflections;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Set;
 import java.util.Vector;
@@ -18,10 +21,29 @@ public class Helpers {
 
     public static <T>  T getInstanceOfExtension(String name) {
         try {
-            return (T)extensionNameToClass.get(name).newInstance();
+            return (T)extensionNameToClass.get(name).getDeclaredConstructor().newInstance();
         } catch (InstantiationException e) {
             e.printStackTrace();
         } catch (IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
+            e.printStackTrace();
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    public static AlgorithmExtension getInstanceOfAlgorithmExtension(String name) {
+        try {
+            return (AlgorithmExtension) extensionNameToClass.get(name).getDeclaredConstructor(BlackBoard.class).newInstance(new BlackBoard());
+        } catch (InstantiationException e) {
+            e.printStackTrace();
+        } catch (IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
+            e.printStackTrace();
+        } catch (NoSuchMethodException e) {
             e.printStackTrace();
         }
         return null;
@@ -30,16 +52,22 @@ public class Helpers {
 
     public static JSONArray getExtensions(String extensionPackage, Class extensionClass) {
         Reflections reflectionsReports = new Reflections(extensionPackage);
-        Set<Class> subTypesReport = reflectionsReports.getSubTypesOf(extensionClass);
+        Set<Class<? extends Extension>> subTypesReport = reflectionsReports.getSubTypesOf(extensionClass);
         Vector<String> reports = new Vector<>();
         JSONArray jsonArray2 = new JSONArray();
         for(Class<? extends Extension> c : subTypesReport) {
+            System.out.println("cc " + c.getName());
             JSONObject jo = new JSONObject();
             String classSimpleName = c.getSimpleName();
             try {
                 jo.put("name",classSimpleName);
-                jo.put("desc",c.newInstance().getDescription());
-            } catch (JSONException | IllegalAccessException | InstantiationException e) {
+
+                if(c.getSuperclass().getName().contains("GraphAlgorithm")) {
+                    jo.put("desc", c.getDeclaredConstructor(BlackBoard.class).newInstance(new BlackBoard()).getDescription());
+                } else {
+                    jo.put("desc", c.getDeclaredConstructor().newInstance().getDescription());
+                }
+            } catch (JSONException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 e.printStackTrace();
             }
             Field[] fs = c.getFields();
